changed the location of image file to description folder

--- a/single_login/static/description/index.html
+++ b/single_login/static/description/index.html
@@ -5,7 +5,7 @@
         <div>
             <div class="oe_demo oe_picture oe_screenshot">
                 <a ><!--href="http://www.nevpro.co.in/" -->
-                    <img src="../src/img/single.png">
+                    <img src="single.png">
                 </a>
             </div>
         </div>
